--- a/modules/core_ui/pubspec.yaml
+++ b/modules/core_ui/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   import_sorter: ^4.6.0
   intl: ^0.18.1
   flutter_pdfview: ^1.4.0
+  libphonenumber: ^2.0.2
 
 dev_dependencies:
   flutter_test:
