--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -118,6 +118,7 @@ dependencies:
   reactive_date_time_picker: ^4.0.0
   flutter_pdfview: ^1.4.0
   socket_io_client: ^3.0.2
+  libphonenumber: ^2.0.2
 
 
 dev_dependencies:
