--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,7 +80,7 @@ dependencies:
   retrofit: ^4.0.1
   json_annotation: ^4.8.1
   intl: ^0.18.1
-  dio: ^5.4.0
+  dio: ^5.8.0+1
   dio_cache_interceptor: ^3.4.2
   get_it: ^7.6.8
   injectable: ^2.4.1
