--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.2.2+45
+version: 1.2.2+47
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
@@ -122,6 +122,7 @@ dependencies:
   pdf_render: ^1.4.12
   flutter_cache_manager: ^3.4.1
   html: ^0.15.5
+  pdfrx: ^1.0.84
 
 dev_dependencies:
   flutter_test:
@@ -133,7 +134,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.1
-  melos: ^5.3.0
+  melos: ^6.0.0
   auto_route_generator: ^7.3.1
   build_runner: ^2.4.6
   retrofit_generator: ^8.0.5
