--- a/modules/feature_process_chart/pubspec.yaml
+++ b/modules/feature_process_chart/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   feature_auth: 0.0.1-alpha.1
   data_auth: 0.0.1-alpha.1
   data_process_chart: 0.0.1-alpha.1
+  data_patient: 0.0.1-alpha.1
   provider: ^6.0.5
   get_it: ^7.6.8
   injectable: ^2.4.1
