--- a/firebase-prod.json
+++ b/firebase-prod.json
@@ -1,7 +1,7 @@
 {
   "hosting": {
     "site": "medical-tourism-prod",
-    "public": "/build/web",
+    "public": "build/web",
     "ignore": [
       "firebase.json",
       "**/.*",
